--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -21,4 +21,5 @@ $light-gray-color               : #f1f2f2; // Light gray color
 @import "modules/animations";
 @import "modules/links";
 @import "modules/buttons";
+@import "modules/checkboxes";
 @import "modules/misc";
