Fix input width in advanced search

--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -34,7 +34,16 @@
             form {
                 margin: 0 0 10px;
             }
-            
+
+            .input-append {
+                input[type="text"] {
+                    width: 137px;
+                }
+            }
+            input[type="text"] {
+                width: 170px;
+            }
+
             .slider-row {
                 margin-bottom: 8px;
 
