Stop trying to capitalize lowercase model names for safe_get_model
It's crazy to capitalize "mapfeature" and try to load the "MapFeature"
Python class.

Instead, require every use of the "create" and "search" templatetags
to use a case-sensitive model name.

The model names are still lowercased before being added to the DOM
though :(

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -20,7 +20,7 @@
     <a href="javascript:;" id="cancel-add-tree" class="btn" style="display: none;">{% trans "Cancel Adding Tree" %}</a>
 
     {# Hidden id fields for use in creating a new tree #}
-    {% create from "tree.plot" for request.user in request.instance withtemplate "treemap/field/hidden.html" %}
+    {% create from "Tree.plot" for request.user in request.instance withtemplate "treemap/field/hidden.html" %}
     {% localize off %}
     {% field from "plot.id" for request.user withtemplate "treemap/field/hidden.html" %}
     {% endlocalize %}
