--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -21,9 +21,9 @@
         <h4>2. {% trans "Additional information" %}</h4>
         <form id="add-tree-form" onsubmit="return false;">
           {# The "add-tree-species" label is used as an id prefix in "species_ul.html" #}
-          {% create "add-tree-species" from "tree.species" in request.instance withtemplate "treemap/field/species_div.html" %}
+          {% create "add-tree-species" from "Tree.species" in request.instance withtemplate "treemap/field/species_div.html" %}
           {% trans "Trunk Diameter" as diameter %}
-          {% create diameter from "tree.diameter" in request.instance withtemplate "treemap/field/diameter_div.html" %}
+          {% create diameter from "Tree.diameter" in request.instance withtemplate "treemap/field/diameter_div.html" %}
 
           {% for label, identifier in fields_for_add_tree %}
               {% create label from identifier in request.instance withtemplate "treemap/field/div.html" %}
