Fix ecobenefit styling

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -45,7 +45,7 @@
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#yearlyEco">{% trans "Yearly Eco Benefits" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
     </div>
     <div id="yearlyEco" class="accordion-body collapse in">
-      <div class="accordion-inner" id="benefit-values"></div>
+      <div class="accordion-inner benefit-values" id="benefit-values"></div>
     </div>
   </div>
   {% endif %}
