Add template variable for hiding summary info
Certain parts of ecobenefit calculations are not relevent to single-mapfeature ecobenefit calculations, like separate section headers for tree/resource (because it's obviously either one or the other) and calculation basis (since it's always equal to 1). Add option to hide these so that single-mapfeature calculations can be rendered easily.

--- a/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
@@ -3,7 +3,7 @@
 
 {% if request.instance_supports_ecobenefits %}
 <div id="benefit-values" class="benefit-values accordion-inner">
-    {% if not request.instance.stores_plot_only %}
+    {% if not hide_summary not request.instance.stores_plot_only %}
     {% comment %}
     unhide me when the backend is implemented
     {% endcomment %}
@@ -14,7 +14,7 @@
     {% include "treemap/partials/benefit_value_row.html" %}
     {% endfor %}
 
-    {% if not request.instance.stores_plot_only %}
+    {% if not hide_summary not request.instance.stores_plot_only %}
     {% comment %}
     unhide me when the backend is implemented
     {% endcomment %}
@@ -24,6 +24,8 @@
     {% for benefit in resource_benefits %}
     {% include "treemap/partials/benefit_value_row.html" %}
     {% endfor %}
+
+    {% if not hide_summary %}
     <div class="benefit-tree-count">
       {% blocktrans with used=tree_basis.n_trees_used total=tree_basis.n_trees_total %}
         Based on {{ used }} out of {{ total }} total trees
@@ -34,6 +36,7 @@
       {% endblocktrans %}
       {% endif %}
     </div>
+    {% endif %}
 </div>
 {% endif %}
 <div id="tree-and-planting-site-counts">
