--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -37,6 +37,14 @@
                 id="cancel-edit-plot-location"
                 disabled="disabled">Cancel Tree Move</button>
       </div>
+      <div class="accordion-inner benefit-values hidden">
+        {% comment %}
+        TODO: on tree select, make ajax call to ecobenefits with
+         just one tree. render, calling _format_benefits with
+         summary = True, and stick the results from
+         search_tree_benefits in here.
+        {% endcomment %}
+      </div>
     </div>
   </div>
   {% if request.instance_supports_ecobenefits %}
