--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -47,7 +47,7 @@ body {
 	border-radius: 6px;
 	box-shadow: 0 3px 0 gray;
 	box-shadow: 0 3px 0 rgba(0,0,0,.35);
-	margin: 50px auto 90px;
+	margin: 90px auto;
 	position: relative;
 	width: 920px;
 
@@ -87,6 +87,11 @@ body {
     
     .btn {
         margin-bottom: 5px;
+    }
+    p {
+        &:last-of-type {
+            margin-bottom: 0;
+        }
     }
 }
 
