--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -58,7 +58,9 @@ input[type="tel"],
 input[type="color"], 
 textarea, 
 .uneditable-input {
-	font-size: 1.6rem;
+	font-size: 1.3rem;
+    font-weight: 300;
+    letter-spacing: 0.25px;
 	padding: 8px 8px;
 	color: $subtext-color;
 	border-radius: 6px;
@@ -77,7 +79,7 @@ textarea,
 .input-append {
 	input {
 		border-radius: 6px 0 0 6px;
-		font-size: 1.6rem;
+		font-size: 1.3rem;
 	}
 	span.add-on {
 		padding: 8px;
