--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -1,13 +1,19 @@
 // Partial: Map Page
 
 #streetview {
-    width: 200px;
-    height: 200px;
+    width: 140px;
+    height: 80px;
     position: absolute;
     left: 20px;
-    bottom: 80px;
+    bottom: 40px;
     background: gray;
     z-index: 10000;
+    text-align: center;
+    padding: 60px 30px;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #AAA;
+    box-shadow: 0 2px 6px rgba(0,0,0,.5);
 }
 
 #streetview img {
