Styling fixes on subheader/advanced search, wording fix on add tree steps

--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -39,10 +39,24 @@
             .input-append {
                 input[type="text"] {
                     width: 137px;
+
+                    & + span {
+                        margin: 0;
+                    }
+                }
+
+                & + span {
+                    margin: 0 10px;
+                    font-size: 1.4rem;
                 }
             }
             input[type="text"] {
-                width: 170px;
+                width: 174px;
+
+                & + span {
+                    margin: 0 10px;
+                    font-size: 1.4rem;
+                }
             }
 
             .slider-row {
