--- a/opentreemap/treemap/templates/treemap/partials/step_set_location.html
+++ b/opentreemap/treemap/templates/treemap/partials/step_set_location.html
@@ -11,7 +11,7 @@
         <div class="alert alert-info place-marker-message">{% trans 'Choose a point on the map, search by address, or select "Use Current Location."' %}</div>
         <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate this address" %}</div>
         <div class="alert alert-error text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
-        <div class="alert alert-info move-marker-message" style="display: none;">{% trans "Please move marker to exact location of" %} {{ feature_name }}</div>
+        <div class="alert alert-info move-marker-message" style="display: none;">{% trans "Please move marker to exact location of the" %} {{ feature_name }}</div>
     </div>
     {% include 'treemap/partials/step_controls.html' %}
 </div>
