--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -7,9 +7,14 @@
     border-top: 1px solid lighten($primary-color, 35%);
     pointer-events: none;
 
+    
+
     &.expanded {
         .subhead-inner {
+            -ms-transform: translateY(0);
+            -moz-transform: translateY(0);
             -webkit-transform: translateY(0);
+            transform: translateY(0);
             top: 0;
         }
     }
@@ -20,7 +25,10 @@
     }
 
     .subhead-inner {
+        -ms-transform: translateY(-100%);
+        -moz-transform: translateY(-100%);
         -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
         transition: all 400ms cubic-bezier(0, 0, 0.1, 1);
         top: 45px;
         position: relative;
@@ -41,7 +49,7 @@
                     width: 137px;
 
                     & + span {
-                        margin: 0;
+                        margin: 0 0 0 -1px;       
                     }
                 }
 
