Clarify "identifier" syntax in UI fields
Our UI fields all have an "identifier" (e.g. `plot.geom`) which we use for communicating values between client and server. Be more consistent about how the first part is handled:
* Spell it consistently, as the model name with a lowercase first letter (e.g. `benefitCurrencyConversion`)
* Call it the "object name" not the "model name", since it is capitalized differently than the model name
* Add and use utilities `to_model_name()` and `to_object_name()`
* Camel-case "mapfeature" and "treephoto" in many places related to search

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -58,7 +58,7 @@
               {% endfor %}
             </div>
             <div class="span3" id="display-filters" data-search-type="IN"
-                data-search-identifier="mapfeature.feature_type">
+                data-search-identifier="mapFeature.feature_type">
               <h4>{% trans "Display Filters" %}</h4>
               {% for field in request.instance.advanced_search_fields.display %}
                 {% include "treemap/partials/search_in.html" %}
