--- a/opentreemap/treemap/templates/treemap/partials/search_bar.html
+++ b/opentreemap/treemap/templates/treemap/partials/search_bar.html
@@ -17,7 +17,7 @@
     <div class="search-field-group">
       <a class="typeahead-toggle" id="boundary-toggle"><i class="icon-menu"></i></a>
       <input type="text" data-class="search" id="boundary-typeahead" placeholder="Address, City, State"/>
-      <input name="mapfeature.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
+      <input name="mapFeature.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
     </div>
   </div>
 </div> <!-- end search block wrapper -->
